Fix rating visibility

--- a/assets/css/frontend.less
+++ b/assets/css/frontend.less
@@ -133,6 +133,10 @@
 			font-size: 80%;
 		}
 
+		&__reply &__rating {
+			display: none;
+		}
+
 		&__listing,
 		&__text {
 			&:not(:last-child) {
